@@ -1,3 +1,8 @@
+2008-07-24  Igor Zelmanovich <igorz@mainsoft.com>
+
+	* HttpWorkerRequest.cs:
+	* HttpWorkerRequest.jvm.cs:
+	consider setCharacterEncoding(string) is J2EE 1.4 or higher
 
 2008-05-19 Noam Lampert <noaml@mainsoft.com>
 
